# jaisogani-ai-nyaya-env-courtroom

./: Dockerfile  LICENSE  README.md  app_3d.py  baseline.py  curriculum.py  environment.py  grader.py  huggingface_blog_post.md  inference.py  openenv.yaml  oversight_agent.py  pyproject.toml  realistic_cases.py  requirements.txt  rewards.py  self_improve.py  server.py  test_asymmetric_info.py  test_god_eye.py  threejs_courtroom.js  train.py  train_grpo.py  train_trl.py  training_colab.ipynb
